Finished Identity Api module

--- a/src/services/NerdStoreEnterprise.Identity.API/appsettings.Development.json
+++ b/src/services/NerdStoreEnterprise.Identity.API/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NerdStoreEnterpriseDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "ILOVEDOTNETENVIRONMENT",
+    "HoursToExpire": "2",
+    "Issuer": "NerdStore",
+    "Audience": "https://localhost"
   }
 }
