--- a/src/web/NerdStoreEnterprise.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "AutenticacaoUrl": "https://localhost:44396",
+  "AuthenticationUrl": "https://localhost:44316",
   "CatalogoUrl": "https://localhost:44397",
   "Logging": {
     "LogLevel": {
