--- a/src/services/NerdStoreEnterprise.Catalog.API/appsettings.Development.json
+++ b/src/services/NerdStoreEnterprise.Catalog.API/appsettings.Development.json
@@ -8,5 +8,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "ILOVEDOTNETENVIRONMENT",
+    "HoursToExpire": "2",
+    "Issuer": "NerdStore",
+    "Audience": "https://localhost"
   }
 }
