--- a/src/web/NerdStoreEnterprise.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AuthenticationUrl": "https://localhost:44316",
-  "CatalogoUrl": "https://localhost:44307",
+  "CatalogUrl": "https://localhost:44339",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
