--- a/src/web/NerdStoreEnterprise.WebApp.MVC/NerdStoreEnterprise.WebApp.MVC.csproj
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/NerdStoreEnterprise.WebApp.MVC.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Refit" Version="5.2.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.10" />
   </ItemGroup>
 
 </Project>
